assets/styles/_aside.scss
> aside {
	align-items: end;
	grid-template-areas:
		"links button";
	margin-bottom: calc(-1 * var(--margin--vertical));
	top:           calc(var(--tagline--height) + var(--margin--vertical) * 2 - 0.2rem); // Slight overlap for rounding.

	@include landscape {
		align-self:     end;
		bottom:         var(--margin--vertical);
		grid-row:       1; // Force overlap with About content.
		margin-bottom:  initial;
		margin-top:     var(--margin);
		padding-bottom: initial;
		top:            initial;
	}




	// The link list.
	> ul {
		@extend %type--layout;

		--typography--leading: var(--typography--leading--tagline);
		--typography--size:    var(--typography--size--tagline);

		align-items:    start;
		display:        flex;
		grid-area:      links;
		flex-direction: column;
		gap:            var(--typography--between);

		> li {
			> a {
				@extend %link--element;

				> p {
					> svg {
						--icon--shift: calc((var(--typography--cap-height) - var(--typography--x-height)) / 2 * 1em);

						height:        calc(var(--typography--cap-height) * 1em);
						margin-bottom: calc(var(--icon--shift) * -1);
					}
				}
			}
		}
	}



	// The “top” arrow holder.
	> section {
		@include landscape {
			align-items:     end;
			display:         flex;
			height:          calc(var(--links--height) + var(--footer--spacing) + var(--colophon--height) - var(--margin--vertical));
			justify-content: center;
			margin-bottom:   calc(-1 * var(--footer--spacing) - var(--colophon--height) + var(--margin--vertical));

			> nav {
				bottom:   var(--margin--vertical);
				position: sticky;

				> a {
					transform: translateY(0.2rem); // Optical shift.

					@include breakpoint(768) {
						transform: translateY(0.4rem);
					}
				}
			}
		}
	}
}

